# xmonad-config

./: .gitignore  .xmobarrc  Makefile  README.md  build  cabal.project  hooks  xmonad-config.cabal  xmonad.hs
.github/workflows/: ci.yaml
app/: Main.hs
hooks/: autorandr  wallpaper
src/XMonad/: A5ob7r.hs
src/XMonad/Actions/WindowGo/: Extra.hs
src/XMonad/Config/A5ob7r/: ColorScheme.hs
src/XMonad/Hooks/StatusBar/PP/: Extra.hs
src/XMonad/Operations/: Extra.hs
src/XMonad/Prompt/Shell/: Extra.hs
src/XMonad/Util/EZConfig/: Extra.hs
xmobar/: xmobarrc
