cabal-version: 2.4
name:          xmonad-config
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        a5ob7r
maintainer:    12132068+a5ob7r@users.noreply.github.com

flag pedantic
  description: Enable -Werror
  default:     False
  manual:      True

common common-options
  -- GHC 9.2.* until 9.2.3 have a bug related to 'keepAlive#' primitive, and
  -- this frequently causes a xmonad binary's crash by segfault.
  -- <https://gitlab.haskell.org/ghc/ghc/-/issues/21708#note_440043>
  build-depends:    base >=4.14 && <4.16 || >=4.16.3
  ghc-options:
    -Wall -Wredundant-constraints -Wpartial-fields -Wunused-packages
    -Widentities

  if flag(pedantic)
    ghc-options: -Werror

  default-language: Haskell2010

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: XMonad.Config.A5ob7r.ColorScheme

executable myxmonad
  import:         common-options
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , containers      ^>=0.6.5
    , X11             ^>=1.10.2
    , xmonad          ^>=0.17
    , xmonad-config
    , xmonad-contrib  ^>=0.17

  ghc-options:    -Wno-missing-signatures
