cabal-version: 2.4
name:          xmonad-config
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        a5ob7r
maintainer:    12132068+a5ob7r@users.noreply.github.com

flag pedantic
  description: Enable -Werror
  default:     False
  manual:      True

common common-options
  build-depends:    base >=4.14 && <4.19
  ghc-options:
    -Wall -Wredundant-constraints -Wpartial-fields -Wunused-packages
    -Widentities

  if flag(pedantic)
    ghc-options: -Werror

  default-language: Haskell2010

library
  import:          common-options
  hs-source-dirs:  src
  build-depends:
    , extra
    , xmonad          ^>=0.18
    , xmonad-contrib  ^>=0.18

  exposed-modules:
    XMonad.Actions.WindowGo.Extra
    XMonad.Config.A5ob7r.ColorScheme

executable myxmonad
  import:         common-options
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , extra
    , filepath
    , transformers
    , unix            ^>=2.8
    , X11             >=1.7
    , xmonad          ^>=0.18
    , xmonad-config
    , xmonad-contrib  ^>=0.18

  ghc-options:    -Wno-missing-signatures
