cabal-version: 2.4
name: xmonad-config
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: a5ob7r
maintainer: 12132068+a5ob7r@users.noreply.github.com

flag pedantic
  description: Enable -Werror
  default: False
  manual: True

common common-options
  -- Support latest 2 major GHC versions that marked as "Suitable for use".
  --
  -- https://gitlab.haskell.org/ghc/ghc/-/wikis/GHC-status
  build-depends: base >=4.21 && <4.23
  ghc-options:
    -Wall
    -Wredundant-constraints
    -Wpartial-fields
    -Wunused-packages
    -Widentities

  if flag(pedantic)
    ghc-options: -Werror
  default-language: Haskell2010

library
  import: common-options
  hs-source-dirs: src
  build-depends:
    extra,
    transformers,
    X11 >=1.7,
    xmonad ^>=0.18.1,
    xmonad-contrib ^>=0.18.2,

  exposed-modules: XMonad.A5ob7r
  other-modules:
    XMonad.Actions.WindowGo.Extra
    XMonad.Config.A5ob7r.ColorScheme
    XMonad.Hooks.StatusBar.PP.Extra
    XMonad.Operations.Extra
    XMonad.Prompt.Shell.Extra
    XMonad.Util.EZConfig.Extra

executable myxmonad
  import: common-options
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: xmonad-config
